# sdl2-game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  button.cpp  button.h  check.h  main.cpp  text.cpp  text.h  widget.cpp  widget.h
